# wizward

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: README.md  adopted_inventory.json
assets/audio/: sfx.json
assets/converted/: memory_layout.json  memory_layout.md
assets/converted/attract/: attract_p1_girl.json  attract_p2_boy.json  report.html  report.json
assets/converted/gameplay/: background.hpp  background.json  intermediate.json  palette_indices.hpp  report.html  report.json  sprites.hpp  sprites.json
assets/converted/title/: intermediate.json  logo.json  report.html  report.json  screen.json  title_sprites.hpp
assets/manifests/: attract.json  background.json  gameplay.json  title.json
docs/: rp2350_port.md  runtime_assets.md
rp2350/: CMakeLists.txt  main.cpp
src/assets/: embedded_assets.hpp  game_assets.cpp  game_assets.hpp  title_assets.cpp  title_assets.hpp  wizward_font.cpp  wizward_font.hpp
src/audio/: audio_assets.cpp  bgm_data.cpp  bgm_data.hpp  sfx_data.cpp  sfx_data.hpp
src/demo/: main.cpp
src/game/: game.cpp  game.hpp  gameplay.cpp  gameplay.hpp
src/world/: world_map.cpp  world_map.hpp
tests/: CMakeLists.txt  asset_test.cpp  game_test.cpp  gameplay_test.cpp  world_map_test.cpp
tools/: build_assets.py  collect_selected_assets.py  embed_assets.py  generate_palette_indices.py  report_asset_memory.py  verify_converted_assets.py
